--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ version: "3.9"
 services:
   postgres:
     image: postgres:14-alpine
+    container_name: simple-bank-postgres
     environment:
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=secret
